@@ -2,6 +2,12 @@
 \title{News for Package \pkg{RcppCNPy}}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
+\section{Changes in version 0.0.2 (2012-07-05)}{
+  \itemize{
+    \item Added automatic use of transpose to automagically account for
+    Fortran-vs-C major storage defaults between Python and R.
+    \item Added support for reading gzip'ed files ending in ".npy.gz"
+}
 \section{Changes in version 0.0.1 (2012-07-04)}{
   \itemize{
     \item Initial version, as a straightforward Rcpp modules wrap around
